# CompMathPSAT

./: .gitmodules  CMakeLists.txt
post_proccessing/IntegrationFolder/: IntegrationProcessing.ipynb  err.txt  errRichardson.txt
post_proccessing/InterpolationFolder/: InterpolationProcessing.ipynb  errChebN345.txt  errN3.txt  errN345.txt  errN4.txt  errN5.txt
post_proccessing/NonLinearEquationsFolder/: NonLinearEqsProcessing.ipynb  errKepler.txt  solutions.txt
post_proccessing/NumDerivativeFolder/: NumDerivativeProc.ipynb  errors.txt  errorsAdvanced.txt
post_proccessing/RungeKuttaFolder/: RungeKuttaProcessing.ipynb  err.txt  err1.txt
post_proccessing/SplineFolder/: SplineProcessing.ipynb  errGeneral.txt  errNatural.txt
src/: CMakeLists.txt  Integration.hpp  Interpolation.hpp  NonLinearEquations.hpp  NumDerivative.hpp  RungeKutta.hpp  SlaeSolver.hpp  Spline.hpp  test.hpp
tests/: CMakeLists.txt  IntegrationTests.cc  InterpolationTest.cc  NonLinearEquationsTests.cc  NumDerivativeTests.cc  RungeKuttaTests.cc  SplineTests.cc
